package com.ProjetoIntegrado.DependancyHeaven.domain;

public enum Estado {
    BLOQUEADO,
    PENDENTE,
    EM_ANDAMENTO,
    FINALIZADO
}
